# brain-forge

./: .delete_brain_forge_complete.py  .env.example  .gitignore  .pre-commit-config.yaml  COMPLETION_REPORT.md  Dockerfile  FINAL_COMPLETION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  LICENSE  PROJECT_CLEANUP_SUMMARY.md  PROJECT_PROGRESS_TRACKER.md  PROJECT_REORGANIZATION_COMPLETE.md  PROJECT_STATUS.md  README.md  REORGANIZATION_LOG.md  VERSION_0_2_0_SUMMARY.md  brain_forge_complete.py  clean_root_directory.py  demo_v0_2_0.py  demonstrate_completion.sh  docker-compose.dev.yml  docker-compose.yml  install_and_validate.sh  pyproject.toml  pytest.ini  quick_test.py  requirements.txt  run.sh  run_cleanup.py  run_dashboard.sh  run_tests.py  run_validation.py  run_websocket_bridge.sh  test-benchmark.json  test-calibration.json  test_basic_functionality.py  test_core_imports.py  test_imports.py  validate_brain_forge.py  validate_infrastructure.py  (+2 more)
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation_issue.yml  feature_request.yml  hardware_issue.yml  performance_issue.yml  question.yml  security_issue.yml
.github/instructions/: tasksync.instructions.md
.github/workflows/: ci-cd.yml  ci.yml  docs.yml  release.yml
archive/: PROJECT_PROGRESS_TRACKER.md  test_project_completion_original.py
brain_forge/: __init__.py
brain_forge/core/: __init__.py
config/: README.md
config/linting/: .flake8  .mypy.ini  .pylintrc  README.md  pyproject.toml
configs/: default.yaml
configs/production/: config.py
data/calibration_files/: accelerometer_calibration_ACCEL-SIM-001.json
demo-gui/: GUI_SUCCESS_SUMMARY.md  IMPLEMENTATION_STATUS.md  INTERACTIVE_FEATURES.md  README.md  index.html  package-lock.json  package.json  run.sh  setup.sh  tailwind.config.js  tsconfig.json  vite.config.ts
demo-gui/src/: App.tsx  index.css
docker/: Dockerfile  dev-backend.Dockerfile  dev-frontend.Dockerfile  dev-tools.Dockerfile  docker-compose.yml  requirements.txt
docs/: API.md  CHANGELOG.md  CLEANUP_INSTRUCTIONS.md  COMPLETION_REPORT.md  CONTRIBUTING.md  DESIGN.md  FINAL_COMPLETION_STATUS.md  FINAL_SUCCESS_REPORT.md  GUI_IMPLEMENTATION_COMPLETE.md  GUI_IMPLEMENTATION_PLAN.md  INSTALLATION.md  ISSUE_TEMPLATES.md  LINTING.md  PROJECT_PROGRESS_TRACKER.md  PROJECT_PROGRESS_TRACKER_COMPREHENSIVE.md  PROJECT_STANDARDS.md  README.md  README_NEW.md  REQUIREMENTS.md  TEMPLATE_CUSTOMIZATION.md  TESTING.md  TESTING_INFRASTRUCTURE_COMPLETION.md  TROUBLESHOOTING.md  architecture.md  design.md  development-standards.md  getting-started.md  gui_design.md  hardware-integration.md  integrated-system-architecture.md  issue-templates.md  project-organization.md  project-status.md  project_plan.md  project_structure.md  tasksync-beastmode-integration.md  tech-stack.md
docs/api/: api_reference.md  rest_api.md
docs/guides/: installation.md
docs/notebooks/: brain-forge-tech-stack.ipynb  multimodal-brain-integration.ipynb
docs/partnerships/: kernel_partnership_proposal.md
docs/project/: CLEANUP_COMPLETE.md  CLEANUP_SUMMARY.md  README.md  ROOT_CLEANUP_SUMMARY.md
docs/reports/: PROJECT_COMPLETION_REPORT.md  README.md
docs/technical/: ethical_framework.md  system_architecture.md
examples/: README.md  api_integration_demo.py  brain_forge_complete.py  brain_simulation_demo.py  brain_visualization_demo.py  clinical_application_demo.py  mock_hardware_framework.py  neural_processing_demo.py  performance_benchmarking.py  phase3_completion_demo.py  quick_start.py  real_time_acquisition_demo.py  single_modality_bci_demo.py  single_modality_demo.py  test_single_modality_demo.py
examples/docs/: api_integration_demo_README.md  brain_simulation_demo_README.md  brain_visualization_demo_README.md  clinical_application_demo_README.md  incremental_development_strategy_README.md  interactive_data_acquisition_README.md  mock_hardware_framework_README.md  neural_processing_demo_README.md  performance_benchmarking_demo_README.md  phase3_completion_demo_README.md  quick_start_README.md  real_time_acquisition_demo_README.md  single_modality_demo_README.md
examples/jupyter_notebooks/: 01_Interactive_Data_Acquisition.ipynb  02_Incremental_Development_Strategy.ipynb
k8s/: README.md  brain-forge-deployment.yaml  configmap.yaml  hpa.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  postgres-deployment.yaml  redis-deployment.yaml  secrets.yaml  services.yaml
reports/: phase1_restructuring_status.md  phase_progress_report.md
requirements/: base.txt  dev.txt  gpu.txt  hardware.txt  visualization.txt
scripts/: README.md  benchmark_performance.py  calibrate_hardware.py  demo_third_party_integration.py  demonstrate_completion.sh  deploy.sh  install_and_validate.sh  quick_setup.py  quick_validate.py  run_validation.py  setup_environment.py  simple_validate.py  test_integration.py  test_linting_config.py  validate_brain_forge.py  validate_completion.py  validate_infrastructure.py  validate_project_completion.py  validate_project_structure.py  validate_stubs.py
scripts/setup/: restructure_project.sh
src/: __init__.py  integrated_system.py  specialized_tools.py  streamlit_app.py
src/acquisition/: __init__.py  stream_manager.py
src/api/: __init__.py  rest_api.py  security_integration.py  websocket_bridge.py
src/core/: __init__.py  config.py  (+2 more)
tasksync/: log.md  tasks.md
tests/: __init__.py  conftest.py  quick_test.py  quick_validation.py  test_basic_functionality.py  test_core_imports.py  test_core_infrastructure.py  test_hardware_validation.py  test_imports.py  test_processing_validation.py  test_project_completion.py  test_streaming_validation.py  validate_completion.py  validate_implementation.py
tools/: cleanup_empty_files.py  cleanup_root_directory.py  complete_root_cleanup.py  comprehensive_test_suite.py  init_db.sql  run_tests.py  run_validation.py  setup_dev_environment.py  test_api_functionality.py  test_api_startup.py
validation/: quick_api_test.py  test_project_completion.py  validate_infrastructure.py
(+69 files in other folders)
