[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brain-forge"
version = "0.1.0"
description = "Advanced brain scanning and simulation platform"
authors = [{name = "Brain-Forge Team"}]
license = {text = "MIT"}
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "mne>=1.0.0",
    "nilearn>=0.8.0",
    "brian2>=2.4.0",
    "pylsl>=1.14.0"
]

[tool.setuptools]
package-dir = {"" = "src"}
